# OpenRCT2

./: .gitignore  AGENTS.md  CHAIN.md  CMakeLists.txt  CUSTOM_OBJECTS.md  ONCHAIN_PLAN.md  QUICKSTART.md  readme.md
ai-agent-workspace/: IN_GAME_AGENT.md
chain-sidecar/: CMakeLists.txt  README.md  STRESS.md  package-lock.json  package.json  tsconfig.json
chain-sidecar/src/: config.ts  log.ts  main.ts
chain-sidecar/src/batcher/: batch.ts  dispatch.ts  index.ts  nonces.ts  sign.ts
chain-sidecar/src/chain/: abis.ts  balances.ts  clients.ts  decode-revert.ts  faucet-reserve.ts  faucet.ts  index.ts  operators.ts  topup.ts
chain-sidecar/src/deployments/: index.ts
chain-sidecar/src/derive/: cache.ts  index.ts
chain-sidecar/src/funder/: funder.ts  index.ts
chain-sidecar/src/ipc/: handlers.ts  protocol.ts  server.ts
chain-sidecar/src/keystore/: index.ts
chain-sidecar/src/metrics/: aggregator.ts  index.ts
chain-sidecar/src/outbox/: cursor.ts  index.ts  reader.ts  types.ts  wal.ts
chain-sidecar/test/: batcher-batch.test.ts  batcher-dispatch.test.ts  batcher-nonces.test.ts  batcher-sign.test.ts  chain-clients.test.ts  chain-decode-revert.test.ts  chain-faucet.test.ts  chain-operators.test.ts  chain-topup.test.ts  deployments.test.ts  derive-cache.test.ts  derive.test.ts  funder.test.ts  ipc.test.ts  keystore.test.ts  metrics.test.ts  outbox.test.ts  permits-collector.test.ts  permits-sign.test.ts  ratelimit-spend.test.ts  relayer-pool.test.ts  relayer-viem-submitter.test.ts  session.test.ts  stress.test.ts  sweeper.test.ts  venues-epoch.test.ts  venues-mirror.test.ts
contracts/: .env.example  .gitignore  README.md  foundry.toml
contracts/deployments/: monad-testnet.json
contracts/script/: Deploy.s.sol
contracts/src/: Disperse.sol  Faucet.sol  GuestRegistry.sol  LendingPool.sol  ParkToken.sol  ParkTreasury.sol  SettlementBatcher.sol  VenueRegistry.sol
contracts/test/: Deploy.t.sol  Disperse.t.sol  Faucet.t.sol  GuestRegistry.t.sol  LendingPool.t.sol  ParkToken.t.sol  ParkTreasury.t.sol  SettlementBatcher.t.sol  SettlementBatcherGas.t.sol  VenueRegistry.t.sol
data/: openrct2
indexer/: .gitignore  .npmrc  README.md  config.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  schema.graphql  tsconfig.json
indexer/src/: EventHandlers.ts
rctctl/: CMakeLists.txt
rctctl/include/rctctl/commands/: command_groups.hpp
rctctl/include/rctctl/renderers/: chain.hpp
rctctl/src/commands/: chain_commands.cpp  news_weather_commands.cpp  registry.cpp  ride_commands.cpp  staff_commands.cpp
rctctl/src/renderers/: chain.cpp  rides.cpp  weather_news.cpp
rctctl/src/rpc/: json_rpc_client.cpp
scripts/: chain-feed.mjs  chain-feed.sh  chain-spend-debug.sh  check-sidecar.sh  deploy-indexer.sh  extract_tree_sprites.py  extract_tree_sprites_v2.py  launch-game.sh  start-indexer.sh  tail-events.sh
src/openrct2/: CMakeLists.txt  Cheats.cpp  OpenRCT2.cpp  OpenRCT2.h
src/openrct2-ui/: CMakeLists.txt
test/chain/: outbox_roundtrip.cpp  parse_wal.mjs  run_outbox_roundtrip.sh
(+56 files in other folders)
